--- a/pom.xml
+++ b/pom.xml
@@ -621,7 +621,7 @@
 							</execution>
 						</executions>
 					</plugin>
-					<plugin>
+<!--					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
 						<version>1.5</version>
@@ -635,6 +635,7 @@
 							</execution>
 						</executions>
 					</plugin>
+-->
 				</plugins>
 			</build>
 		</profile>
